# SPDX-License-Identifier: CC-BY-SA-4.0
# Copyright 2021 Peter A. Bigot

stmemsc_lib = static_library('stmemsc', [
                             'a3g4250d_reg.c',
                             'ais2dw12_reg.c',
                             'ais2ih_reg.c',
                             'ais328dq_reg.c',
                             'ais3624dq_reg.c',
                             'asm330lhh_reg.c',
                             'h3lis100dl_reg.c',
                             'h3lis331dl_reg.c',
                             'hts221_reg.c',
                             'i3g4250d_reg.c',
                             'iis2dh_reg.c',
                             'iis2dlpc_reg.c',
                             'iis2iclx_reg.c',
                             'iis2mdc_reg.c',
                             'iis328dq_reg.c',
                             'iis3dhhc_reg.c',
                             'iis3dwb_reg.c',
                             'ism303dac_reg.c',
                             'ism330dhcx_reg.c',
                             'ism330dlc_reg.c',
                             'l20g20is_reg.c',
                             'l3gd20h_reg.c',
                             'lis25ba_reg.c',
                             'lis2de12_reg.c',
                             'lis2dh12_reg.c',
                             'lis2ds12_reg.c',
                             'lis2dtw12_reg.c',
                             'lis2dw12_reg.c',
                             'lis2hh12_reg.c',
                             'lis2mdl_reg.c',
                             'lis331dlh_reg.c',
                             'lis3de_reg.c',
                             'lis3dh_reg.c',
                             'lis3dhh_reg.c',
                             'lis3dsh_reg.c',
                             'lis3mdl_reg.c',
                             'lps22ch_reg.c',
                             'lps22hb_reg.c',
                             'lps22hh_reg.c',
                             'lps25hb_reg.c',
                             'lps27hhtw_reg.c',
                             'lps27hhw_reg.c',
                             'lps33hw_reg.c',
                             'lps33k_reg.c',
                             'lps33w_reg.c',
                             'lsm303agr_reg.c',
                             'lsm303ah_reg.c',
                             'lsm6ds3_reg.c',
                             'lsm6ds3tr_c_reg.c',
                             'lsm6dsl_reg.c',
                             'lsm6dsm_reg.c',
                             'lsm6dso32_reg.c',
                             'lsm6dso_reg.c',
                             'lsm6dsox_reg.c',
                             'lsm6dsr_reg.c',
                             'lsm6dsrx_reg.c',
                             'lsm9ds1_reg.c',
                             'stts22h_reg.c',
                             'stts751_reg.c',
                             ],          
                             pic: false,
                             include_directories: stmemsc_inc)
